examples/fail/kurosawa-desmedt-KEM.zc
../all/kurosawa-desmedt-KEM.zc